pkgs/drbd9/drbd/.compat_test.6.3.7/have_blk_queue_make_request.stderr
<command-line>: warning: "KBUILD_MODNAME" redefined
<command-line>: note: this is the location of the previous definition
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/have_blk_queue_make_request.c: In function ‘foo’:
/home/hernad/nix/kernel/build-drbd/drbd/drbd-kernel-compat/tests/have_blk_queue_make_request.c:7:9: error: implicit declaration of function ‘blk_queue_make_request’; did you mean ‘blk_queue_max_segments’? [-Werror=implicit-function-declaration]
    7 |         blk_queue_make_request(NULL, NULL);
      |         ^~~~~~~~~~~~~~~~~~~~~~
      |         blk_queue_max_segments
cc1: some warnings being treated as errors
